--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,10 @@ Collate:
     sider_barplot.R
     plot_colorkey.R
     heatmap.R
+    cor_heatmap.R
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
